<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/m_longitud"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="#63F895"
                android:onClick="cambiar"
                android:text="@string/btn_longitud"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:strokeColor="#33D349"
                app:strokeWidth="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/m_peso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="#B0F8F0"
                android:onClick="cambiar"
                android:text="@string/btn_peso"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:strokeColor="#0EAC9F"
                app:strokeWidth="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/m_volumen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="#EF93EA"
                android:onClick="cambiar"
                android:text="@string/btn_volumen"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:strokeColor="#9C0B89"
                app:strokeWidth="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/m_temperatura"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="#F1E490"
                android:onClick="cambiar"
                android:text="@string/btn_temperatura"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:strokeColor="#D6CD1B"
                app:strokeWidth="4dp" />
        </TableRow>
    </TableLayout>

</LinearLayout>